[tool.poetry]
name = "opennyai"
version = "0.0.12"
description = "A SpaCy pipeline and models for NLP on indian legal text."
authors = ["Aman Tiwari <aman.tiwari@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10"

spacy = ">=3.2.2,<3.3.0"
pandas = ">1.2.4"
beautifulsoup4 = ">=4.10.0"
torch = ">=1.12.1"
levenshtein = "^0.23.0"
multiprocess = "^0.70.15"
spacy-transformers = ">=1.1.4"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"
prettytable = ">=3.1.1"
nltk = ">=3.6"
pytorch-transformers = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
